// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<[pid]/> Should render image content 1`] = `
<div>
  <nav
    class="layoutstyled__Nav-sc-8nnf55-1 gumLIW fixed"
  >
    <img
      alt="nasa official logo"
      src="https://logodownload.org/wp-content/uploads/2019/03/nasa-logo-0-599x599.png"
    />
    <a
      href="/"
    >
      HOME
    </a>
  </nav>
  <div
    class="layoutstyled__Window-sc-8nnf55-0 hAxrTc"
  >
    <main>
      <div
        class="pidstyled____Shadow-ykk1b1-3 liknqs"
      >
        <img
          alt="Dark Matter in a Simulated Universe"
          class="pidstyled____Img-ykk1b1-4 dNmvsJ"
          src="https://apod.nasa.gov/apod/image/2010/DarkMatter_KipacAmnh_1200.jpg"
        />
      </div>
      <div
        class="pidstyled____Buttons-ykk1b1-1 paKRh"
      >
        <button
          class="pidstyled____Zoom-ykk1b1-2 cyoMLA"
        >
          -
        </button>
        <button
          class="pidstyled____Zoom-ykk1b1-2 cyoMLA"
        >
          +
        </button>
      </div>
      <article
        class="pidstyled__Article-ykk1b1-0 gVhwTP"
      >
        <img
          alt="Dark Matter in a Simulated Universe"
          class="pidstyled____Img-ykk1b1-4 kdtqkJ"
          src="https://apod.nasa.gov/apod/image/2010/DarkMatter_KipacAmnh_1200.jpg"
        />
        <div
          class="pidstyled____Info-ykk1b1-5 hobxxD"
        >
          <span
            class="pidstyled____Date-ykk1b1-6 dvTthX"
          >
            2020-10-25 - Tom AbelRalf KaehlerKIPACSLACAMNH
          </span>
          <h1
            class="pidstyled____H1-ykk1b1-7 bZLzKH"
          >
            Dark Matter in a Simulated Universe
          </h1>
          <hr />
          <p
            class="pidstyled____P-ykk1b1-8 gXUPiD"
          >
            Is our universe haunted?
          </p>
          <button
            class="pidstyled____Button-ykk1b1-9 iRJOBP"
          >
            See in HD
          </button>
        </div>
      </article>
    </main>
  </div>
</div>
`;

exports[`<[pid]/> Should render spinner 1`] = `
<div>
  <nav
    class="layoutstyled__Nav-sc-8nnf55-1 gumLIW fixed"
  >
    <img
      alt="nasa official logo"
      src="https://logodownload.org/wp-content/uploads/2019/03/nasa-logo-0-599x599.png"
    />
    <a
      href="/"
    >
      HOME
    </a>
  </nav>
  <div
    class="layoutstyled__Window-sc-8nnf55-0 hAxrTc"
  >
    <main>
      <div
        aria-label="loading data"
        class="jsx-3207870244 loader"
      />
    </main>
  </div>
</div>
`;

exports[`<[pid]/> Should render video content 1`] = `
<div>
  <nav
    class="layoutstyled__Nav-sc-8nnf55-1 gumLIW fixed"
  >
    <img
      alt="nasa official logo"
      src="https://logodownload.org/wp-content/uploads/2019/03/nasa-logo-0-599x599.png"
    />
    <a
      href="/"
    >
      HOME
    </a>
  </nav>
  <div
    class="layoutstyled__Window-sc-8nnf55-0 hAxrTc"
  >
    <main>
      <div
        class="pidstyled____Shadow-ykk1b1-3 liknqs"
      >
        <img
          alt="A Flight over Jupiter Near the Great Red Spot"
          class="pidstyled____Img-ykk1b1-4 dNmvsJ"
        />
      </div>
      <div
        class="pidstyled____Buttons-ykk1b1-1 paKRh"
      >
        <button
          class="pidstyled____Zoom-ykk1b1-2 cyoMLA"
        >
          -
        </button>
        <button
          class="pidstyled____Zoom-ykk1b1-2 cyoMLA"
        >
          +
        </button>
      </div>
      <article
        class="pidstyled__Article-ykk1b1-0 MEanz"
      >
        <iframe
          allow="fullscreen;"
          allowfullscreen=""
          height="315"
          src="https://www.youtube.com/embed/xh3EKDghbuU"
          style="margin: auto auto 40px auto; display: block; max-width: 90vw;"
          width="540"
        />
        <div
          class="pidstyled____Info-ykk1b1-5 hobxxD"
        >
          <span
            class="pidstyled____Date-ykk1b1-6 dvTthX"
          >
            2020-10-19 
          </span>
          <h1
            class="pidstyled____H1-ykk1b1-7 bZLzKH"
          >
            A Flight over Jupiter Near the Great Red Spot
          </h1>
          <hr />
          <p
            class="pidstyled____P-ykk1b1-8 gXUPiD"
          >
            Are you willing to wait to see the largest
          </p>
        </div>
      </article>
    </main>
  </div>
</div>
`;
